...
                                                                <constraint firstAttribute="trailing" secondItem="80u-jD-Bwf" secondAttribute="trailing" constant="8" id="sqz-uF-UKR"/>
                                                            </constraints>
                                                        </view>
                                                        <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Snk-38-Cgt">
                                                            <rect key="frame" x="10" y="190" width="355" height="24"/>
                                                            <subviews>
                                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="ARTICLE" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="a9Q-hM-b1d">
                                                                    <rect key="frame" x="0.0" y="0.0" width="73.5" height="24"/>
                                                                    <color key="backgroundColor" name="LightBlueColor"/>
                                                                    <fontDescription key="fontDescription" type="system" weight="heavy" pointSize="17"/>
                                                                    <color key="textColor" name="AppBackgroundColor"/>
                                                                    <nil key="highlightedColor"/>
                                                                </label>
...
